k8s/base/services/media/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - homeserver-2
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin:10.10.7
          ports:
            - containerPort: 8096
              name: webui
            - containerPort: 7359
              name: discover
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /config
              subPath: jellyfin-config
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: media-data-hostpath
      restartPolicy: Always
