k8s/base/services/media/jellyfin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  ports:
    - port: 8096
      targetPort: 8096
      name: webui
    - port: 7359
      targetPort: 7359
      name: discovery
      protocol: UDP
  selector:
    app: jellyfin
