k8s/base/services/media/jellyfin/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jellyfin.lffl.internal`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
